feat: display users in user list page and update user service with getUsers and getUserAllDetails function

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,1 +1,6 @@
-<p>user-list works!</p>
+<div *ngFor="let user of users">
+    <div>id: {{user.id}}</div>
+    <div>name: <a routerLink="/profil/{{user.id}}">{{user.name}}</a></div>
+    <div>role: {{user.roleId}}</div>
+    <hr>
+</div>
