--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <nav></nav>
 <router-outlet></router-outlet>
+<app-modal [actif]="modalActif" [content]="contentModal" (changeActifEvent)="changeModalActif($event)"></app-modal>
