feat: add signup form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
   </button>
   <ng-template #logoutBtn>
     <button>
+      <a routerLink="/signup">Inscription</a>
+    </button>
+    <button>
       <a routerLink="/login">Connexion</a>
     </button>
   </ng-template>
