--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<h2>Connexion</h2>
 <form (submit)="validation()">
     <label for="username">Username: </label>
     <input id="username" name="name" [(ngModel)]="user.name" placeholder="username"><br>
