--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,10 @@
-<p>signup works!</p>
+<h2>Inscription</h2>
+<form (submit)="validation()">
+    <label for="username">Username: </label>
+    <input id="username" name="name" [(ngModel)]="user.name" placeholder="username"><br>
+    <label for="password">Password: </label>
+    <input type="password" name="password" id="password" [(ngModel)]="user.password" placeholder="password"><br>
+    <label for="validPassword">validation du Password: </label>
+    <input type="password" name="validPassword" id="validPassword" [(ngModel)]="user.validationPassword" placeholder="Réentrez votre password"><br>
+    <button type="submit">Validation</button>
+</form>
