feat: add text if no student in training details

--- a/src/app/training-details/training-details.component.html
+++ b/src/app/training-details/training-details.component.html
@@ -14,8 +14,12 @@
 </ul>
 
 <h3>Apprenant</h3>
-<ul>
+<ul *ngIf="training.users && training.users.length > 0; else noApprenant">
     <li *ngFor="let user of training.users">
         <a routerLink="/profil/{{user.userId}}">{{user.user.name}}</a>
     </li>
 </ul>
+
+<ng-template #noApprenant>
+    Pas d'apprenant inscrit à la formation
+</ng-template>
